testsuite/tests/typecheck/should_fail/T3613.stderr

T3613.hs:14:20: error:
    Couldn't match type ‘IO’ with ‘Maybe’
    Expected type: Maybe b0
      Actual type: IO b0
    In the first argument of ‘fooThen’, namely ‘(bar >> undefined)’
    In the expression: fooThen (bar >> undefined)
    In the expression:
      let fooThen m = foo >> m in fooThen (bar >> undefined)

T3613.hs:17:24: error:
    Couldn't match expected type ‘Maybe a0’ with actual type ‘IO ()’
    In a stmt of a 'do' block: bar
    In the first argument of ‘fooThen’, namely
      ‘(do { bar;
             undefined })’
    In the expression:
      fooThen
        (do { bar;
              undefined })
